@@ -5,40 +5,36 @@ import java.util.LinkedList;
 
 public class BinaryTreeSerialization {
 
-    // Encodes a tree to a single String.
     public String serialize(TreeNode root) {
-        StringBuilder treeBuilder = new StringBuilder();
-        preOrder(root, treeBuilder);
-        return treeBuilder.toString();
+        if (root == null) return null;
+        StringBuilder sb = new StringBuilder();
+        _serialize(root, sb);
+        return sb.toString();
     }
-
-    private void preOrder(TreeNode treeNode, StringBuilder treeBuilder) {
-        if (treeNode == null) {
-            treeBuilder.append("null,");
+    private void _serialize(TreeNode node, StringBuilder sb) {
+        if (node == null) {
+            sb.append("null,");
             return;
         }
-        treeBuilder.append(treeNode.val + ",");
-        preOrder(treeNode.left, treeBuilder);
-        preOrder(treeNode.right, treeBuilder);
+        sb.append(node.val).append(",");
+        _serialize(node.left, sb);
+        _serialize(node.right, sb);
     }
-
-    // Decodes your encoded data to tree.
     public TreeNode deserialize(String data) {
-        String[] tree = data.split(",");
-        LinkedList<String> linkedList = new LinkedList<>(Arrays.asList(tree));
-        return constructBinaryTree(linkedList);
+        if (data == null || data.length() == 0) return null;
+        String[] arr = data.split(",");
+        LinkedList<String> l = new LinkedList <>(Arrays.asList(arr));
+        return _deserialize(l);
     }
-
-    private TreeNode constructBinaryTree(LinkedList<String> l) {
-        // Recursive deserialization.
-        if (l.get(0).equals("null")) {
-            l.remove(0);
+    private TreeNode _deserialize(LinkedList<String> l) {
+        if (l.getFirst().equals("null")) {
+            l.removeFirst();
             return null;
         }
-        TreeNode root = new TreeNode(Integer.valueOf(l.get(0)));
-        l.remove(0);
-        root.left = constructBinaryTree(l);
-        root.right = constructBinaryTree(l);
-        return root;
+        TreeNode node = new TreeNode(Integer.parseInt(l.getFirst()));
+        l.removeFirst();
+        node.left = _deserialize(l);
+        node.right = _deserialize(l);
+        return node;
     }
 }
